[gd_scene load_steps=5 format=3 uid="uid://behnrftxc42e0"]

[ext_resource type="Script" path="res://enemy.gd" id="2_cmunl"]
[ext_resource type="Texture2D" uid="uid://7a5wapgqyk1l" path="res://enemies/mole/dirt_mound.png" id="3_q6ury"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dwwco"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"out",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"underground",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g177d"]
radius = 7.52942
height = 31.0304

[node name="mole" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_dwwco")
animation = &"hurt"
autoplay = "underground"
script = ExtResource("2_cmunl")

[node name="hit_ranger" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="hit_ranger"]
shape = SubResource("CapsuleShape2D_g177d")

[node name="despawn_timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 6.5)
scale = Vector2(1, 1.3125)
texture = ExtResource("3_q6ury")

[connection signal="area_entered" from="hit_ranger" to="." method="_on_hit_ranger_area_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
